e2e(vm):add vm sidebar vm tab (#1636)
PR close #1252

--- a/src/app/account/account-page/account-page.component.html
+++ b/src/app/account/account-page/account-page.component.html
@@ -26,9 +26,7 @@
   </ng-container>
 
   <ng-container cs-sidebar>
-    <cs-sidebar [isOpen]="listService?.hasSelected()">
-      <router-outlet></router-outlet>
-    </cs-sidebar>
+    <cs-sidebar [isOpen]="listService?.hasSelected()"> <router-outlet></router-outlet> </cs-sidebar>
   </ng-container>
 </cs-list>
 
@@ -47,8 +45,6 @@
   ></cs-account-list>
 
   <ng-container cs-sidebar>
-    <cs-sidebar [isOpen]="listService?.hasSelected()">
-      <router-outlet></router-outlet>
-    </cs-sidebar>
+    <cs-sidebar [isOpen]="listService?.hasSelected()"> <router-outlet></router-outlet> </cs-sidebar>
   </ng-container>
 </div>
