--- a/src/app/account/account-sidebar/account-users/account-user-password.component.html
+++ b/src/app/account/account-sidebar/account-users/account-user-password.component.html
@@ -1,6 +1,4 @@
-<h3 class="mat-dialog-title">
-  {{ 'ACCOUNT_PAGE.USER.CHANGE_PASSWORD' | translate }}
-</h3>
+<h3 class="mat-dialog-title">{{ 'ACCOUNT_PAGE.USER.CHANGE_PASSWORD' | translate }}</h3>
 <form (ngSubmit)="onChangePassword()" #passwordForm="ngForm">
   <mat-form-field class="full-width-input">
     <input
