--- a/src/app/security-group/sg-list-item/card-item/security-group-card-item.component.html
+++ b/src/app/security-group/sg-list-item/card-item/security-group-card-item.component.html
@@ -16,9 +16,7 @@
   <mat-card-content>
     <div class="entity-card-data-line" *ngIf="isPrivate">
       {{ 'SECURITY_GROUP_PAGE.CARD.VM_NAME' | translate }}:
-      <ng-template [ngIf]="item.virtualmachineids[0]">
-        {{ sgVmName }}
-      </ng-template>
+      <ng-template [ngIf]="item.virtualmachineids[0]"> {{ sgVmName }} </ng-template>
       <ng-template [ngIf]="!item.virtualmachineids[0]">
         {{ 'SECURITY_GROUP_PAGE.DETAILS.EMPTY_VM_NAME' | translate }}
       </ng-template>
