--- a/src/app/shared/components/date-picker/calendar-month.component.html
+++ b/src/app/shared/components/date-picker/calendar-month.component.html
@@ -9,9 +9,7 @@
     >
       <ng-container *ngIf="day">
         <div class="button-state" [class.selected]="isSameDate(day)"></div>
-        <span class="label">
-          {{ getDay(day) }}
-        </span>
+        <span class="label"> {{ getDay(day) }} </span>
       </ng-container>
       <span class="label" *ngIf="!day"></span>
     </div>
