--- a/src/app/snapshot/recurring-snapshots/policy-editor/monthly/monthly-policy.component.html
+++ b/src/app/snapshot/recurring-snapshots/policy-editor/monthly/monthly-policy.component.html
@@ -16,9 +16,7 @@
       [placeholder]="'DATE_TIME.DAY_OF_MONTH' | translate"
       required
     >
-      <mat-option *ngFor="let d of daysOfMonth" [value]="d">
-        {{ d }}
-      </mat-option>
+      <mat-option *ngFor="let d of daysOfMonth" [value]="d"> {{ d }} </mat-option>
     </mat-select>
   </mat-form-field>
 </div>
