--- a/src/app/snapshot/recurring-snapshots/stored-number/stored-number.component.html
+++ b/src/app/snapshot/recurring-snapshots/stored-number/stored-number.component.html
@@ -13,7 +13,5 @@
     required
     #storedSnapshots="ngModel"
   />
-  <mat-error *ngIf="storedSnapshots.invalid">
-    {{ errorMessage | async }}
-  </mat-error>
+  <mat-error *ngIf="storedSnapshots.invalid"> {{ errorMessage | async }} </mat-error>
 </mat-form-field>
