--- a/src/app/ssh-keys/ssh-key-creation/ssh-private-key-dialog.component.html
+++ b/src/app/ssh-keys/ssh-key-creation/ssh-private-key-dialog.component.html
@@ -16,8 +16,6 @@
     >
       {{ 'CLIPBOARD.COPY' | translate }}
     </button>
-    <button mat-button color="primary" matDialogClose>
-      {{ 'COMMON.OK' | translate }}
-    </button>
+    <button mat-button color="primary" matDialogClose>{{ 'COMMON.OK' | translate }}</button>
   </div>
 </div>
