--- a/src/app/ssh-keys/ssh-key-filter/ssh-key-filter.component.html
+++ b/src/app/ssh-keys/ssh-key-filter/ssh-key-filter.component.html
@@ -19,9 +19,7 @@
       [dragItems]="groupings"
       (ngModelChange)="groupingsChanged.emit($event)"
     >
-      <mat-option *ngFor="let g of groupings" [value]="g">
-        {{ g.label | translate }}
-      </mat-option>
+      <mat-option *ngFor="let g of groupings" [value]="g"> {{ g.label | translate }} </mat-option>
     </cs-draggable-select>
   </mat-form-field>
 </div>
