--- a/src/app/vm/vm-creation/components/affinity-group-manager/vm-creation-affinity-group-manager.component.html
+++ b/src/app/vm/vm-creation/components/affinity-group-manager/vm-creation-affinity-group-manager.component.html
@@ -11,9 +11,7 @@
           {{ affinityGroup.type | csAffinityGroupType }}</span
         >
       </ng-container>
-      <ng-template #noAffinityGroup>
-        {{ 'COMMON.NONE' | translate }}
-      </ng-template>
+      <ng-template #noAffinityGroup> {{ 'COMMON.NONE' | translate }} </ng-template>
     </div>
   </span>
 </cs-fancy-select>
