--- a/src/app/vm/vm-creation/components/security-group-rules-manager/security-group-manager-existing-group/security-group-manager-existing-group.component.html
+++ b/src/app/vm/vm-creation/components/security-group-rules-manager/security-group-manager-existing-group/security-group-manager-existing-group.component.html
@@ -6,7 +6,5 @@
   >
     {{ securityGroupsLine }}
   </span>
-  <ng-template #noSG>
-    {{ 'COMMON.NONE' | translate }}
-  </ng-template>
+  <ng-template #noSG> {{ 'COMMON.NONE' | translate }} </ng-template>
 </div>
