--- a/src/app/vm/vm-creation/components/security-group-selector/security-group-selector.component.html
+++ b/src/app/vm/vm-creation/components/security-group-selector/security-group-selector.component.html
@@ -9,9 +9,7 @@
         <h4 matLine>
           <span>{{ sg.name }}</span>
         </h4>
-        <p matLine class="matLine-secondary">
-          {{ sg.description }}
-        </p>
+        <p matLine class="matLine-secondary">{{ sg.description }}</p>
       </span>
 
       <span>
