--- a/src/app/vm/vm-creation/components/security-group/vm-creation-security-group.component.html
+++ b/src/app/vm/vm-creation/components/security-group/vm-creation-security-group.component.html
@@ -1,6 +1,4 @@
-<h3 class="mat-dialog-title">
-  {{ title[savedData.mode] | translate }}
-</h3>
+<h3 class="mat-dialog-title">{{ title[savedData.mode] | translate }}</h3>
 
 <div class="mat-dialog-content">
   <mat-button-toggle-group [(ngModel)]="savedData.mode">
