--- a/src/app/vm/vm-creation/ssh-key-selector/ssh-key-selector.component.html
+++ b/src/app/vm/vm-creation/ssh-key-selector/ssh-key-selector.component.html
@@ -4,9 +4,7 @@
     [ngModel]="sshKeyPair"
     (selectionChange)="sshKeyPairChange.emit($event.value)"
   >
-    <mat-option [value]="sshKeyNotSelected">
-      {{ sshKeyNotSelected?.name | translate }}
-    </mat-option>
+    <mat-option [value]="sshKeyNotSelected"> {{ sshKeyNotSelected?.name | translate }} </mat-option>
     <mat-option *ngFor="let keyPair of sshKeyPairs" [value]="keyPair">
       {{ keyPair.name }}
     </mat-option>
