--- a/src/app/volume/volume-page/volume-page.component.html
+++ b/src/app/volume/volume-page/volume-page.component.html
@@ -25,8 +25,6 @@
   </ng-container>
 
   <ng-container cs-sidebar>
-    <cs-sidebar [isOpen]="listService?.hasSelected()">
-      <router-outlet></router-outlet>
-    </cs-sidebar>
+    <cs-sidebar [isOpen]="listService?.hasSelected()"> <router-outlet></router-outlet> </cs-sidebar>
   </ng-container>
 </cs-list>
