--- a/src/app/volume/volume-sidebar/details/disk-offering/volume-sidebar-disk-offering.component.html
+++ b/src/app/volume/volume-sidebar/details/disk-offering/volume-sidebar-disk-offering.component.html
@@ -1,9 +1,7 @@
 <mat-card *ngIf="offering">
   <mat-card-header>
     <mat-card-title>
-      <h2 class="mat-card-title-text">
-        {{ 'VOLUME_PAGE.DETAILS.DISK_OFFERING' | translate }}
-      </h2>
+      <h2 class="mat-card-title-text">{{ 'VOLUME_PAGE.DETAILS.DISK_OFFERING' | translate }}</h2>
     </mat-card-title>
   </mat-card-header>
   <mat-card-content>
