--- a/src/app/account/account-sidebar/account-limits/account-limits.component.html
+++ b/src/app/account/account-sidebar/account-limits/account-limits.component.html
@@ -1,9 +1,7 @@
 <mat-card class="custom-card">
   <mat-card-header>
     <mat-card-title>
-      <h2 class="mat-card-title-text">
-        {{ 'ACCOUNT_PAGE.SIDEBAR.LIMITS' | translate }}
-      </h2>
+      <h2 class="mat-card-title-text">{{ 'ACCOUNT_PAGE.SIDEBAR.LIMITS' | translate }}</h2>
     </mat-card-title>
   </mat-card-header>
 
