--- a/src/app/dialog/dialog-service/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/dialog/dialog-service/confirm-dialog/confirm-dialog.component.html
@@ -2,9 +2,7 @@
   <h3 *ngIf="config?.title" class="mat-dialog-title" [innerHTML]="config?.title | translate"></h3>
   <div class="mat-dialog-content notification" [innerHTML]="translatedMessage | async"></div>
   <div class="mat-dialog-actions">
-    <button mat-button color="primary" matDialogClose>
-      {{ config.declineText | translate }}
-    </button>
+    <button mat-button color="primary" matDialogClose>{{ config.declineText | translate }}</button>
     <button mat-button color="primary" [matDialogClose]="true">
       {{ config.confirmText | translate }}
     </button>
