--- a/src/app/security-group/components/sg-rule-addition-form/sg-rule-addition-form.component.html
+++ b/src/app/security-group/components/sg-rule-addition-form/sg-rule-addition-form.component.html
@@ -23,9 +23,7 @@
       [placeholder]="'SECURITY_GROUP_PAGE.RULES.ENTER_CIDR' | translate"
       required
     />
-    <mat-error>
-      {{ 'SECURITY_GROUP_PAGE.RULES.ENTER_VALID_CIDR' | translate }}
-    </mat-error>
+    <mat-error> {{ 'SECURITY_GROUP_PAGE.RULES.ENTER_VALID_CIDR' | translate }} </mat-error>
   </mat-form-field>
 
   <!--This container contains start, end port fields for protocols such TCP, UDP-->
@@ -43,9 +41,7 @@
         [placeholder]="'SECURITY_GROUP_PAGE.RULES.START_PORT' | translate"
         required
       />
-      <mat-error>
-        {{ getStartPortErrorMessage() }}
-      </mat-error>
+      <mat-error> {{ getStartPortErrorMessage() }} </mat-error>
     </mat-form-field>
 
     <mat-form-field>
@@ -61,9 +57,7 @@
         [errorStateMatcher]="portMatcher"
         required
       />
-      <mat-error>
-        {{ getEndPortErrorMessage() }}
-      </mat-error>
+      <mat-error> {{ getEndPortErrorMessage() }} </mat-error>
     </mat-form-field>
   </ng-container>
 
@@ -78,9 +72,7 @@
         #icmpTypeField
         required
       />
-      <mat-error>
-        {{ 'SECURITY_GROUP_PAGE.RULES.ENTER_VALID_TYPE' | translate }}
-      </mat-error>
+      <mat-error> {{ 'SECURITY_GROUP_PAGE.RULES.ENTER_VALID_TYPE' | translate }} </mat-error>
       <mat-autocomplete #icmpTypesAuto="matAutocomplete" class="icmp-autocomplete-width">
         <mat-option *ngFor="let icmp of filteredIcmpTypes" [value]="icmp.type">
           [{{ icmp.type }}] {{ getIcmpTypeTranslationToken(icmp.type) | translate }}
@@ -96,9 +88,7 @@
         [matAutocomplete]="icmpCodesAuto"
         required
       />
-      <mat-error>
-        {{ 'SECURITY_GROUP_PAGE.RULES.ENTER_VALID_CODE' | translate }}
-      </mat-error>
+      <mat-error> {{ 'SECURITY_GROUP_PAGE.RULES.ENTER_VALID_CODE' | translate }} </mat-error>
       <mat-autocomplete #icmpCodesAuto="matAutocomplete" class="icmp-autocomplete-width">
         <mat-option *ngFor="let codes of filteredIcmpCodes" [value]="codes">
           [{{ codes }}] {{ getIcmpCodeTranslationToken(+icmpTypeField.value, codes) | translate }}
