--- a/src/app/security-group/sg-page/security-group-page.component.html
+++ b/src/app/security-group/sg-page/security-group-page.component.html
@@ -1,8 +1,6 @@
 <cs-list (action)="showCreationDialog()" [creationEnabled]="isCreationEnabled">
   <ng-container cs-panels>
-    <cs-top-bar>
-      <cs-sg-filter-container></cs-sg-filter-container>
-    </cs-top-bar>
+    <cs-top-bar> <cs-sg-filter-container></cs-sg-filter-container> </cs-top-bar>
   </ng-container>
 
   <ng-container *loading="isLoading" cs-list>
