--- a/src/app/security-group/sg-rules/sg-rules.component.html
+++ b/src/app/security-group/sg-rules/sg-rules.component.html
@@ -89,8 +89,6 @@
     <button *ngIf="!isPredefinedTemplate" mat-button color="primary" (click)="confirmChangeMode()">
       {{ (!editMode ? 'COMMON.EDIT' : 'COMMON.VIEW') | translate }}
     </button>
-    <button mat-button color="primary" matDialogClose>
-      {{ 'COMMON.CLOSE' | translate }}
-    </button>
+    <button mat-button color="primary" matDialogClose>{{ 'COMMON.CLOSE' | translate }}</button>
   </div>
 </ng-container>
