--- a/src/app/settings/components/vm-logs-settings/vm-logs-messages/vm-logs-messages.component.html
+++ b/src/app/settings/components/vm-logs-settings/vm-logs-messages/vm-logs-messages.component.html
@@ -1,6 +1,4 @@
-<h3 class="no-margin nowrap">
-  {{ 'SETTINGS.VM_LOGS.SHOW_LAST_MESSAGES' | translate }}
-</h3>
+<h3 class="no-margin nowrap">{{ 'SETTINGS.VM_LOGS.SHOW_LAST_MESSAGES' | translate }}</h3>
 
 <cs-update-button-field-group>
   <mat-form-field>
