--- a/src/app/shared/components/date-picker/calendar-year.component.html
+++ b/src/app/shared/components/date-picker/calendar-year.component.html
@@ -9,9 +9,7 @@
         >
           {{ year }}
         </span>
-        <span *ngIf="selectedDate.getFullYear() != year" class="label">
-          {{ year }}
-        </span>
+        <span *ngIf="selectedDate.getFullYear() != year" class="label"> {{ year }} </span>
       </div>
     </div>
   </div>
