--- a/src/app/shared/components/overlay-loading/overlay-loading.component.html
+++ b/src/app/shared/components/overlay-loading/overlay-loading.component.html
@@ -1,5 +1,3 @@
 <div class="overlay" *ngIf="active">
-  <div class="message">
-    <mat-spinner [diameter]="50" [strokeWidth]="5"></mat-spinner>
-  </div>
+  <div class="message"><mat-spinner [diameter]="50" [strokeWidth]="5"></mat-spinner></div>
 </div>
