--- a/src/app/ssh-keys/ssh-key-list-item/card-item/ssh-key-card-item.component.html
+++ b/src/app/ssh-keys/ssh-key-list-item/card-item/ssh-key-card-item.component.html
@@ -1,8 +1,6 @@
 <mat-card (click)="onClicked()" class="entity-card">
   <mat-card-header class="entity-card-header">
-    <div class="entity-card-thumbnail">
-      <mat-icon class="mdi-key"></mat-icon>
-    </div>
+    <div class="entity-card-thumbnail"><mat-icon class="mdi-key"></mat-icon></div>
     <mat-card-title [matTooltip]="item.name" class="entity-card-title">
       {{ item.name }}
     </mat-card-title>
@@ -17,9 +15,7 @@
   </mat-card-header>
 
   <mat-card-content>
-    <div class="entity-card-data-line">
-      {{ item.fingerprint }}
-    </div>
+    <div class="entity-card-data-line">{{ item.fingerprint }}</div>
   </mat-card-content>
 
   <mat-menu #actionsMenu="matMenu">
