--- a/src/app/ssh-keys/ssh-keys-page/ssh-keys-page.component.html
+++ b/src/app/ssh-keys/ssh-keys-page/ssh-keys-page.component.html
@@ -1,8 +1,6 @@
 <cs-list (action)="showCreationDialog()">
   <ng-container cs-panels>
-    <cs-top-bar>
-      <cs-ssh-key-filter-container cs-list></cs-ssh-key-filter-container>
-    </cs-top-bar>
+    <cs-top-bar> <cs-ssh-key-filter-container cs-list></cs-ssh-key-filter-container> </cs-top-bar>
   </ng-container>
 
   <ng-container cs-list>
@@ -22,8 +20,6 @@
   </ng-container>
 
   <ng-container cs-sidebar>
-    <cs-sidebar [isOpen]="listService?.hasSelected()">
-      <router-outlet></router-outlet>
-    </cs-sidebar>
+    <cs-sidebar [isOpen]="listService?.hasSelected()"> <router-outlet></router-outlet> </cs-sidebar>
   </ng-container>
 </cs-list>
