--- a/src/app/vm-logs/vm-logs/vm-logs.component.html
+++ b/src/app/vm-logs/vm-logs/vm-logs.component.html
@@ -9,9 +9,7 @@
   [creationEnabled]="false"
 >
   <div #filterContainer cs-panels>
-    <cs-top-bar>
-      <cs-vm-logs-filter-container></cs-vm-logs-filter-container>
-    </cs-top-bar>
+    <cs-top-bar> <cs-vm-logs-filter-container></cs-vm-logs-filter-container> </cs-top-bar>
   </div>
 
   <div class="table-container" #tableContainer cs-list>
