--- a/src/app/vm/shared/vm-destroy-dialog/vm-destroy-dialog.component.html
+++ b/src/app/vm/shared/vm-destroy-dialog/vm-destroy-dialog.component.html
@@ -8,9 +8,7 @@
   </section>
 </div>
 <div class="mat-dialog-actions">
-  <button mat-button color="primary" matDialogClose>
-    {{ 'COMMON.NO' | translate }}
-  </button>
+  <button mat-button color="primary" matDialogClose>{{ 'COMMON.NO' | translate }}</button>
   <button mat-button color="primary" (click)="confirmDestroy()">
     {{ 'COMMON.YES' | translate }}
   </button>
