--- a/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
+++ b/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
@@ -53,10 +53,7 @@
         <b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b> {{ getSshPassword(vm) }}
       </p>
       <p *ngIf="vm.keypair">
-        <b>{{ 'VM_POST_ACTION.SSH_KEY' | translate }}: </b>
-        <span>
-          {{ vm.keypair }}
-        </span>
+        <b>{{ 'VM_POST_ACTION.SSH_KEY' | translate }}: </b> <span> {{ vm.keypair }} </span>
       </p>
 
       <br />
@@ -86,9 +83,7 @@
         </ng-container>
         <ng-template #invalidUrl>
           {{ httpAccessService.getAddress(vm) }}
-          <span class="error-message">
-            {{ 'ERRORS.VM_POST_ACTION.INVALID_URL' | translate }}
-          </span>
+          <span class="error-message"> {{ 'ERRORS.VM_POST_ACTION.INVALID_URL' | translate }} </span>
         </ng-template>
       </p>
     </div>
