--- a/src/app/vm/vm-creation/components/security-group-rules-manager/vm-creation-security-group-rules-manager.component.html
+++ b/src/app/vm/vm-creation/components/security-group-rules-manager/vm-creation-security-group-rules-manager.component.html
@@ -1,13 +1,9 @@
 <cs-fancy-select>
   <h4 class="fancy-select-header">{{ 'VM_PAGE.VM_CREATION.SECURITY_GROUPS' | translate }}</h4>
   <button mat-button type="button" class="fancy-select-button" (click)="showDialog()">
-    <span *ngIf="showAddButton">
-      {{ 'COMMON.ADD' | translate }}
-    </span>
+    <span *ngIf="showAddButton"> {{ 'COMMON.ADD' | translate }} </span>
 
-    <span *ngIf="showEditButton">
-      {{ 'COMMON.EDIT' | translate }}
-    </span>
+    <span *ngIf="showEditButton"> {{ 'COMMON.EDIT' | translate }} </span>
   </button>
   <span class="fancy-select-content">
     <cs-security-group-manager-base-templates
