--- a/src/app/vm/vm-creation/template/agreement/vm-creation-agreement.component.html
+++ b/src/app/vm/vm-creation/template/agreement/vm-creation-agreement.component.html
@@ -1,13 +1,7 @@
-<div class="agreement-wrapper">
-  <span [innerHTML]="agreement"></span>
-</div>
+<div class="agreement-wrapper"><span [innerHTML]="agreement"></span></div>
 
 <div class="mat-dialog-actions">
-  <button mat-button color="primary" (click)="onCancel()">
-    {{ 'COMMON.CANCEL' | translate }}
-  </button>
+  <button mat-button color="primary" (click)="onCancel()">{{ 'COMMON.CANCEL' | translate }}</button>
 
-  <button mat-button color="primary" (click)="onAgree()">
-    {{ 'COMMON.AGREE' | translate }}
-  </button>
+  <button mat-button color="primary" (click)="onAgree()">{{ 'COMMON.AGREE' | translate }}</button>
 </div>
