--- a/src/app/vm/vm-creation/template/vm-template-dialog.component.html
+++ b/src/app/vm/vm-creation/template/vm-template-dialog.component.html
@@ -1,6 +1,4 @@
-<h3 class="mat-dialog-title">
-  {{ 'VM_PAGE.VM_CREATION.INSTALLATION_SOURCE' | translate }}
-</h3>
+<h3 class="mat-dialog-title">{{ 'VM_PAGE.VM_CREATION.INSTALLATION_SOURCE' | translate }}</h3>
 <div class="mat-dialog-content">
   <cs-template-filter-list-selector
     [templates]="templates"
