--- a/src/app/vm/vm-sidebar/network-detail/nics/nic/nic.component.html
+++ b/src/app/vm/vm-sidebar/network-detail/nics/nic/nic.component.html
@@ -1,9 +1,7 @@
 <mat-card class="vm-card">
   <mat-card-header>
     <mat-card-title>
-      <h2 class="mat-card-title-text">
-        {{ name }}
-      </h2>
+      <h2 class="mat-card-title-text">{{ name }}</h2>
     </mat-card-title>
   </mat-card-header>
 
