fix(snapshot): disable create snapshot button when no name (#1589)

--- a/src/app/vm/vm-sidebar/storage-detail/volumes/snapshot-creation/snapshot-creation.component.html
+++ b/src/app/vm/vm-sidebar/storage-detail/volumes/snapshot-creation/snapshot-creation.component.html
@@ -31,7 +31,14 @@
       <button mat-button color="primary" matDialogClose type="button">
         {{ 'COMMON.CANCEL' | translate }}
       </button>
-      <button *ngIf="enoughResources" mat-button color="primary" type="button" (click)="onSubmit()">
+      <button
+        *ngIf="enoughResources"
+        mat-button
+        color="primary"
+        type="submit"
+        [disabled]="!name"
+        (click)="onSubmit()"
+      >
         {{ 'COMMON.CREATE' | translate }}
       </button>
     </div>
