--- a/src/app/core/nav-menu/components/app-nav/app-nav.component.html
+++ b/src/app/core/nav-menu/components/app-nav/app-nav.component.html
@@ -1,17 +1,23 @@
 <div>
-  <cs-menu-header (buttonClicked)="onMenuButtonClicked()"></cs-menu-header>
+  <cs-menu-header [username]="username"></cs-menu-header>
 
   <div class="nav-routes">
     <ng-container *ngFor="let route of routes">
-      <a
-        class="nav-link"
-        [class.link-active]="route && currentRoute && route.id === currentRoute.id"
-        [routerLink]="route.path"
-        (click)="onMenuButtonClicked()"
-      >
-        <mat-icon [ngClass]="route.icon"></mat-icon>
-        {{ route.text | translate }}
-      </a>
+      <mat-expansion-panel [expanded]="route && currentRoute && route.id === currentRoute.id">
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            <mat-icon [ngClass]="route.icon"></mat-icon>
+            {{ route.text | translate }}
+          </mat-panel-title>
+        </mat-expansion-panel-header>
+        <ng-container *ngFor="let subroute of route.subroutes">
+          <a [routerLink]="subroute.path" class="nav-sub-link" routerLinkActive="link-active">
+            <mat-icon [ngClass]="subroute.icon"></mat-icon>
+            {{ subroute.text | translate }}
+          </a>
+        </ng-container>
+      </mat-expansion-panel>
+      <mat-divider></mat-divider>
     </ng-container>
 
     <a class="nav-link" routerLink="/logout">
