--- a/src/app/core/nav-menu/components/app-nav/app-nav.component.scss
+++ b/src/app/core/nav-menu/components/app-nav/app-nav.component.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: space-between;
   min-width: $nav-menu-min-width;
-  height: 100%;
+  overflow: auto;
 }
 
 .nav-routes {
@@ -14,15 +14,54 @@
   display: flex;
   flex-direction: column;
 
+  .mat-expansion-panel {
+    border-radius: 0;
+    background: none;
+    color: rgba(255, 255, 255, 0.87);
+    box-shadow: none;
+
+    ::ng-deep .mat-expansion-panel-header-description,
+    .mat-expansion-panel-header-title {
+      align-items: center;
+    }
+
+    .mat-expansion-panel-header-title {
+      color: white;
+      font-size: 14px;
+    }
+
+    ::ng-deep .mat-expansion-panel-header-description,
+    ::ng-deep .mat-expansion-indicator::after {
+      color: rgba(255, 255, 255, 0.74);
+    }
+
+    ::ng-deep .mat-expansion-panel-content {
+      font-size: 13px;
+
+      ::ng-deep .mat-expansion-panel-body {
+        padding: 0;
+      }
+    }
+  }
+
+  mat-icon {
+    margin-right: 10px;
+  }
+
   .nav-link {
-    padding: 12px 25px;
+    padding: 12px 24px;
     display: flex;
     align-items: center;
     color: inherit;
     text-decoration: none;
+    font-size: 14px;
+  }
 
-    mat-icon {
-      margin-right: 10px;
-    }
+  .nav-sub-link {
+    padding: 12px 40px;
+    display: flex;
+    align-items: center;
+    color: inherit;
+    text-decoration: none;
   }
 }
