--- a/src/app/core/nav-menu/nav-menu-theme.scss
+++ b/src/app/core/nav-menu/nav-menu-theme.scss
@@ -10,10 +10,13 @@
     color: mat-color($primary, '500-contrast');
     background-color: mat-color($primary);
 
-    .nav-sub-link:hover,
-    .nav-link:hover,
     .link-active {
-      background-color: mat-color($primary, 300);
+      background-color: mat-color($primary, 300) !important;
+    }
+
+    .nav-sub-link:hover,
+    .nav-link:hover {
+      background: rgba(0, 0, 0, 0.1);
     }
   }
 }
