--- a/src/app/core/nav-menu/components/app-nav/app-nav.component.scss
+++ b/src/app/core/nav-menu/components/app-nav/app-nav.component.scss
@@ -57,6 +57,10 @@
     font-size: 14px;
   }
 
+  .nav-link:not(:last-child) {
+    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  }
+
   .nav-sub-link {
     padding: 12px 40px;
     display: flex;
