--- a/src/app/core/nav-menu/components/app-nav/app-nav.component.html
+++ b/src/app/core/nav-menu/components/app-nav/app-nav.component.html
@@ -2,24 +2,26 @@
   <cs-menu-header [username]="username"></cs-menu-header>
 
   <div class="nav-routes">
-    <ng-container *ngFor="let route of routes">
-      <mat-expansion-panel [expanded]="route && currentRoute && route.id === currentRoute.id">
-        <mat-expansion-panel-header>
-          <mat-panel-title>
-            <mat-icon [ngClass]="route.icon"></mat-icon>
-            {{ route.text | translate }}
-          </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-divider></mat-divider>
-        <ng-container *ngFor="let subroute of route.subroutes">
-          <a [routerLink]="subroute.path" class="nav-sub-link" routerLinkActive="link-active">
-            <mat-icon [ngClass]="subroute.icon"></mat-icon>
-            {{ subroute.text | translate }}
-          </a>
-        </ng-container>
-      </mat-expansion-panel>
-    </ng-container>
+    <mat-accordion>
+      <ng-container *ngFor="let route of routes">
+        <mat-expansion-panel [expanded]="route && currentRoute && route.id === currentRoute.id">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <mat-icon [ngClass]="route.icon"></mat-icon>
+              {{ route.text | translate }}
+            </mat-panel-title>
+          </mat-expansion-panel-header>
 
+          <ng-container *ngFor="let subroute of route.subroutes">
+            <a [routerLink]="subroute.path" class="nav-sub-link" routerLinkActive="link-active">
+              <mat-icon [ngClass]="subroute.icon"></mat-icon>
+              {{ subroute.text | translate }}
+            </a>
+          </ng-container>
+        </mat-expansion-panel>
+        <mat-divider></mat-divider>
+      </ng-container>
+    </mat-accordion>
     <a class="nav-link" routerLink="/logout">
       <mat-icon class="mdi-exit-to-app"></mat-icon>
       {{ 'NAVIGATION_SIDEBAR.LOGOUT' | translate }}
