--- a/src/app/core/nav-menu/components/app-nav/app-nav.component.scss
+++ b/src/app/core/nav-menu/components/app-nav/app-nav.component.scss
@@ -14,11 +14,15 @@
   display: flex;
   flex-direction: column;
 
+  .mat-expansion-panel-spacing {
+    margin: 0;
+  }
+
   .mat-expansion-panel {
     border-radius: 0;
     background: none;
     color: rgba(255, 255, 255, 0.87);
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    box-shadow: none;
 
     ::ng-deep .mat-expansion-panel-header-description,
     .mat-expansion-panel-header-title {
@@ -39,7 +43,9 @@
       font-size: 13px;
 
       ::ng-deep .mat-expansion-panel-body {
-        padding: 0;
+        padding: 10px 0 10px 0;
+        box-shadow: 0 3px 2px -1px rgba(0, 0, 0, 0.2) inset,
+          0 -2px 2px -1px rgba(0, 0, 0, 0.2) inset;
       }
     }
   }
@@ -55,10 +61,6 @@
     color: inherit;
     text-decoration: none;
     font-size: 14px;
-  }
-
-  .nav-link:not(:last-child) {
-    box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2);
   }
 
   .nav-sub-link {
