--- a/src/app/core/nav-menu/nav-menu-theme.scss
+++ b/src/app/core/nav-menu/nav-menu-theme.scss
@@ -11,7 +11,7 @@
     background-color: mat-color($primary);
 
     .link-active {
-      background-color: mat-color($primary, 300) !important;
+      background: rgba(0, 0, 0, 0.2) !important;
     }
 
     .nav-sub-link:hover,
