--- a/src/app/core/nav-menu/components/account-info/account-info.component.scss
+++ b/src/app/core/nav-menu/components/account-info/account-info.component.scss
@@ -2,9 +2,11 @@
   margin: 25px;
 }
 
-.account-info-username {
+.account-info-account {
   font-size: 20px;
   font-weight: 500;
+  display: flex;
+  align-items: baseline;
 }
 
 .account-info-role {
@@ -15,4 +17,16 @@
 .account-info-domain {
   font-size: 18px;
   font-weight: 400;
+}
+
+.account-info-name {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding-right: 5px;
+}
+
+.account-welcome {
+  padding-bottom: 20px;
+  font-size: 14px;
 }
