--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,7 @@
       [account]="account$ | async"
       [routes]="routes$ | async"
       [currentRoute]="currentRoute$ | async"
+      [user]="auth.user"
     ></cs-app-nav>
   </mat-sidenav>
   <mat-sidenav-content>
