--- a/src/app/core/nav-menu/components/app-nav/app-nav.component.html
+++ b/src/app/core/nav-menu/components/app-nav/app-nav.component.html
@@ -1,6 +1,6 @@
 <div>
   <cs-menu-header></cs-menu-header>
-  <cs-account-info [account]="account"></cs-account-info>
+  <cs-account-info [account]="account" [user]="user"></cs-account-info>
   <mat-divider></mat-divider>
   <div class="nav-routes">
     <mat-accordion>
