navbar & improve sidenav & responsive design (#1672)
* change nav style

* clean code

* change nav style

* change nav style

* change nav style

* fix visual problems

* fix(vm-api-log): css conflict with nav sidebar

* feature(index.html): add viewport to fit responsive layout

* fix(i18n): NAVIGATION_SIDEBAR.CLOUD translation error

* Revert proxy-conf-example.js

* feature(navbar): export getCurrentSubroute

* feature(nav-menu): change sidenav style to fit the navbar

* feature(shared/top-bar): remove button&notification-box from topbar

* feature(navbar): new navbar

* feature(shared/notification-box): move notification-box to the navbar and show last msg on the navbar

* feature(navbar): i18n for search box placeholder

* refactor(vm-filter): move search box to navbar

* refactor(volume-filter): move search box to navbar

* refactor(event-filter): move search box to navbar

* refactor(snapshot-filter): move search box to navbar

* refactor(template-filter): move search box to navbar

* refactor(sg-filter): move search box to navbar

* feature(shared/grouped-list): show cards center when a small screen

* feature(shared/sidebar): responsive design

* feature(shared/sidebar): use menu button of navbar

* clean(home): delete useless param

* refactor(account-info): show more information

* fix(i18n): improve translations

* fix(home): fix lint error

--- a/src/app/core/nav-menu/components/app-nav/app-nav.component.html
+++ b/src/app/core/nav-menu/components/app-nav/app-nav.component.html
@@ -1,19 +1,27 @@
 <div>
-  <cs-menu-header (buttonClicked)="onMenuButtonClicked()"></cs-menu-header>
-
+  <cs-menu-header></cs-menu-header>
+  <cs-account-info [account]="account" [user]="user"></cs-account-info>
+  <mat-divider></mat-divider>
   <div class="nav-routes">
-    <ng-container *ngFor="let route of routes">
-      <a
-        class="nav-link"
-        [class.link-active]="route && currentRoute && route.id === currentRoute.id"
-        [routerLink]="route.path"
-        (click)="onMenuButtonClicked()"
-      >
-        <mat-icon [ngClass]="route.icon"></mat-icon>
-        {{ route.text | translate }}
-      </a>
-    </ng-container>
+    <mat-accordion>
+      <ng-container *ngFor="let route of routes">
+        <mat-expansion-panel [expanded]="route && currentRoute && route.id === currentRoute.id">
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              <mat-icon [ngClass]="route.icon"></mat-icon>
+              {{ route.text | translate }}
+            </mat-panel-title>
+          </mat-expansion-panel-header>
 
+          <ng-container *ngFor="let subroute of route.subroutes">
+            <a [routerLink]="subroute.path" class="nav-sub-link" routerLinkActive="link-active">
+              <mat-icon [ngClass]="subroute.icon"></mat-icon>
+              {{ subroute.text | translate }}
+            </a>
+          </ng-container>
+        </mat-expansion-panel>
+      </ng-container>
+    </mat-accordion>
     <a class="nav-link" routerLink="/logout">
       <mat-icon class="mdi-exit-to-app"></mat-icon>
       {{ 'NAVIGATION_SIDEBAR.LOGOUT' | translate }}
