--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,10 @@
+.mat-drawer-side {
+  border-right: none;
+}
+
 mat-sidenav-content {
   display: flex;
+  flex-direction: column;
 
   .primary-content {
     width: 100%;
